Post editor css fixes
* Fix for issue with dark themes not showing text in code blocks

* fixes #378

--- a/modules/ept-frontend/client/scss/ept/variables/_variables.scss
+++ b/modules/ept-frontend/client/scss/ept/variables/_variables.scss
@@ -49,12 +49,13 @@ $secondary-font-color-light: darken($secondary-font-color, 20%);
 // Components Calculated
 $color-highlighted: HSL(200, 20%, 25%);
 $border-color-alt: darken($border-color, 30%);
-$code-block-bg-color: $dark-text-default;
+$code-block-bg-color: lighten($base-background-color, 10%);
 @if (lightness($base-background-color) > 50) {
   $border-color-alt: lighten($border-color, 10%);
-  $code-block-bg-color: #f8f8f8;
+  $code-block-bg-color: darken($base-background-color, 10%);
   $color-highlighted: HSL(60, 100%, 95%);
 }
+$code-block-text-color: color-contrast($code-block-bg-color);
 
 //Header Colors Calculated
 $header-height: 3.125rem;
